Archive2/f7/c64c84c0940cf2/output
main.cpp:16:18: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
        if(count = 0){
           ~~~~~~^~~
main.cpp:16:18: note: place parentheses around the assignment to silence this warning
        if(count = 0){
                 ^
           (        )
main.cpp:16:18: note: use '==' to turn this assignment into an equality comparison
        if(count = 0){
                 ^
                 ==
main.cpp:20:21: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
        if(position = 1 && count > 0){
           ~~~~~~~~~^~~~~~~~~~~~~~~~
main.cpp:20:21: note: place parentheses around the assignment to silence this warning
        if(position = 1 && count > 0){
                    ^
           (                        )
main.cpp:20:21: note: use '==' to turn this assignment into an equality comparison
        if(position = 1 && count > 0){
                    ^
                    ==
main.cpp:23:28: error: assigning to 'struct node *' from incompatible type 'struct node **'; remove &
            new_node->next = &head;
                           ^ ~~~~~
main.cpp:24:23: error: assigning to 'struct node *' from incompatible type 'struct node **'; remove &
            head->prev=&new_node;
                      ^~~~~~~~~~
main.cpp:25:19: error: no viable overloaded '='
            *head = new_node;
            ~~~~~ ^ ~~~~~~~~
main.cpp:5:8: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'struct node *' to 'const node' for 1st argument; dereference the argument with *
struct node{
       ^
main.cpp:5:8: note: candidate function (the implicit move assignment operator) not viable: no known conversion from 'struct node *' to 'node' for 1st argument; dereference the argument with *
struct node{
       ^
main.cpp:36:10: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if(u = 5){
       ~~^~~
main.cpp:36:10: note: place parentheses around the assignment to silence this warning
    if(u = 5){
         ^
       (    )
main.cpp:36:10: note: use '==' to turn this assignment into an equality comparison
    if(u = 5){
         ^
         ==
main.cpp:49:10: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if(u = 2){
       ~~^~~
main.cpp:49:10: note: place parentheses around the assignment to silence this warning
    if(u = 2){
         ^
       (    )
main.cpp:49:10: note: use '==' to turn this assignment into an equality comparison
    if(u = 2){
         ^
         ==
main.cpp:11:9: warning: private field 'i' is not used [-Wunused-private-field]
    int i;
        ^
5 warnings and 3 errors generated.
